--- a/GetUsualNumber/GetUsualNumber/GetUsualNumber.vcxproj
+++ b/GetUsualNumber/GetUsualNumber/GetUsualNumber.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{006C9C9E-D9A6-4932-B400-57AE2E90854F}</ProjectGuid>
+    <ProjectGuid>{A54B7968-D71B-4FC9-9F36-2332CE4AC231}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Project1</RootNamespace>
+    <RootNamespace>GetUsualNumber</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
